Replace the last feedback page entry with happy links.

--- a/r2/r2/templates/feedbackblurb.html
+++ b/r2/r2/templates/feedbackblurb.html
@@ -49,14 +49,14 @@
     <dd><a href="/ad_inq">The instructions are here</a>.</dd>
     <dt>General questions?  Need help?</dt>
     <dd><a href="/r/help">There's a reddit for that, too</a>.</dd>
-    <dt>Crazy, or just feel like ranting at us?</dt>
+    <dt>Frustrated? Need a break?</dt>
     <% r = random.randint(0,2) %>
     %if r == 0:
-      <dd><a href="/r/null">Here is a soothing place to get your aggressions out</a>.</dd>
+      <dd><a href="/r/aww+cats">Here's some pictures of kitties.</a></dd>
     %elif r == 1:
-      <dd><a href="/important" onclick="return false">Just click here until you feel better (like a stress ball)</a>.</dd>
+      <dd><a href="/r/earthporn">How about some soothing nature photos?</a></dd>
     %elif r == 2:
-      <dd><a href="about:blank" target="_blank">There are always other options</a>.</dd>
+      <dd><a href="/r/happy+upliftingnews">Happiness is contagious.</a></dd>
     %endif
   </dl>
 <p>
