More cat links.

--- a/r2/r2/templates/feedbackblurb.html
+++ b/r2/r2/templates/feedbackblurb.html
@@ -52,7 +52,7 @@
     <dt>Frustrated? Need a break?</dt>
     <% r = random.randint(0,2) %>
     %if r == 0:
-      <dd><a href="/r/aww+cats">Here's some pictures of kitties.</a></dd>
+      <dd><a href="/r/aww+cats+catpictures+bagcat+kitties+awww+kittens+catfort">Here's some pictures of kitties.</a></dd>
     %elif r == 1:
       <dd><a href="/r/earthporn">How about some soothing nature photos?</a></dd>
     %elif r == 2:
