--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -4616,41 +4616,40 @@ button.new-campaign:disabled { color: gray; }
 dt { margin-left: 10px; font-weight: bold;  }
 dd { margin-left: 20px;  }
 
-.calendar {
+table.calendar {
     white-space: nowrap;
-    overflow: hidden; 
-    width: 100%; 
+    overflow: hidden;
+    width: 90%;
+    margin-top: 20px;
     position: relative;
-    padding-top: 120px; 
-    padding-bottom: 100px; 
-    margin: 20px 0; 
+    padding-top: 120px;
+    padding-bottom: 100px;
+    empty-cells: show;
 }
 
-.calendar div.grid {
-    position: absolute;
-    top: 0px;
-    bottom: 0px;
-}
-
-.calendar div.grid.today {
+.calendar .today {
     background-color: yellow; 
 }
 
-.calendar div.grid div.header {
-    font-weight: bold; 
+.calendar thead tr {
     border-bottom: 2px solid gray;
-    text-align: center; 
 }
 
-.calendar div.grid + div.grid {
-    border-left: 1px dashed gray; 
+.calendar thead th, .calendar thead td {
+    font-weight: bold;
+    text-align: center;
+    min-width: 125px;
+}
+
+.calendar td, .calendar th[scope="col"] {
+    border-left: 1px dashed gray;
+    min-width: 125px;
 }
 
 .calendar .blob {
     margin: 0;
     padding: 0px; 
     z-index: 10; 
-    float: left;
     cursor: pointer; 
 }
 
