--- a/r2/r2/templates/base.html
+++ b/r2/r2/templates/base.html
@@ -26,7 +26,7 @@
    from r2.models import Link, Comment, Subreddit
    from r2.lib import tracking
 %>
-<%namespace file="utils.html" import="js_setup, googleanalytics"/>
+<%namespace file="utils.html" import="js_setup, googleanalytics, classes"/>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="${c.lang}" 
       xml:lang="${c.lang}" ${c.lang_rtl and unsafe('dir="rtl"') or ''}>
   <head>
@@ -52,10 +52,13 @@
     ${self.head()}
   </head>
 
-  ${self.bodyHTML()}
+  <body ${classes(*thing.page_classes())}>
+    ${self.bodyContent()}
+    ${self.javascript_bottom()}
+  </body>
 </html>
 
-<%def name="bodyHTML()">
+<%def name="bodyContent()">
 </%def>
 
 <%def name="Title()">
@@ -98,4 +101,7 @@ ${googleanalytics('web')}
 </%def>
 
 <%def name="javascript()">
+</%def>
+
+<%def name="javascript_bottom()">
 </%def>
