Fix LESS syntax error and color issues.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -306,7 +306,7 @@ ul.flat-vert {text-align: left;}
 
 .dropdown.lightdrop .selected {
     position: relative;
-    background: transparent none no-repeat scroll center right;
+    background: none no-repeat scroll center right;
     background-image: url(../droparrowgray.gif);
     padding-right: 21px;
     text-decoration: underline;
@@ -820,7 +820,7 @@ a.author { margin-right: 0.5em; }
 
 .media-button .option { color: red; }
 .media-button .option.active {
-    background: transparent none no-repeat scroll right center;
+    background: none no-repeat scroll right center;
     background-image: url(../reddit-button-play.png);   /* SPRITE */
     padding-right: 15px;
     color: #336699;
@@ -3380,7 +3380,7 @@ ul#image-preview-list .description pre {
 }
 
 .dropdown.srdrop .selected {
-    background: transparent none no-repeat scroll center right;
+    background: none no-repeat scroll center right;
     background-image: url(../droparrowgray.gif); 
     display: inline-block;
     vertical-align: bottom;
@@ -3890,7 +3890,7 @@ ul.tabmenu.formtab {
 }
 
 .existing-campaigns td.bid { 
-    background: transparent none no-repeat scroll center right;
+    background: none no-repeat scroll center right;
     padding-right: 15px;
 }
 
@@ -4476,7 +4476,7 @@ table.lined-table {
 .ui-datepicker-inline .ui-datepicker-calendar td.ui-datepicker-today span,
 .ui-datepicker-inline .ui-datepicker-calendar td a.ui-state-active
  {
-    color:  white;;
+    color: white;
     background: -webkit-gradient(linear, 0% 0%, 0% 100%, from( hsl(210, 54%, 65%)), to( hsl(210, 54%, 45%)));
     background: -moz-linear-gradient(top, hsl(210, 54%, 65%), hsl(210, 54%, 45%));
     background-color: #4F8AC9;
