Add DateRange validation to /promoted/graph
* Add option to limit VDateRange to a maximum range
* Make datepicker slightly more flexible
* Show error on bad date ranges on /promoted/graph

--- a/r2/r2/public/static/css/reddit.css
+++ b/r2/r2/public/static/css/reddit.css
@@ -4652,6 +4652,10 @@ button.new-campaign:disabled { color: gray; }
 dt { margin-left: 10px; font-weight: bold;  }
 dd { margin-left: 20px;  }
 
+.calendar-lead {
+    margin: 15px;
+}
+
 table.calendar {
     white-space: nowrap;
     width: 90%;
